--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    The first html class
+    <h1> First class</h1>
+    <p>
+        We learn about github and paragraph tags
+    </p>
 </body>
 </html>
