--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> First class</h1>
     <p>
-        We learn about github and paragraph tags
+        We learned about github and paragraph tags
     </p>
 </body>
 </html>
