--- a/Fourth-Class/index.html
+++ b/Fourth-Class/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fourth-Class</title>
 </head>
 <body>
     <hr>
@@ -63,7 +63,6 @@
     <a href="tel:9851360949">9851360949</a>
     <br>
     <a href="mailto:sarjyantmaharjan@gmail.com">sarjyantmaharjan@gmail.com</a>
-
-
+    <a href="../Fourth-Class/index.html" target="_blank">Fourth-Class</a>
 </body>
 </html>
