--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>
         We learned about github and paragraph tags
     </p>
+    <a href="./Fourth-Class/index.html" target="_blank">Fourth-Class</a>
+    
 </body>
 </html>
